# rdj-airbnb-prices

./: README.md  pyproject.toml
rdj_airbnb_prices/: 00--split dataset.ipynb  01--exploratory-analysis.ipynb
rdj_airbnb_prices/.ipynb_checkpoints/: 00--split dataset-checkpoint.ipynb  01--exploratory-analysis-checkpoint.ipynb
tests/: test_rdj_airbnb_prices.py
