[tool.poetry]
name = "rdj-airbnb-prices"
version = "0.1.0"
description = ""
authors = ["jezzbox <keeltyj@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
seaborn = "^0.11.2"
boto3 = "^1.21.30"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
